1.4.0-vcli-alpha Sara

* Migrated the Execution service. Also added the JSON and XML versions to the 
  calls that Amit added involving tokens and quering information from a running
  flow.

* Migrated the Locations service to the new Python-based dispatcher
	(!) Changed the behavior of remove location to only remove the components and
	    flows existing in that location instead of the current regenerate and add
	    which has the potential of getting rid of temporary components/flows added 
	    by a developer

* Migrated the Publish services to the new Python-based dispatcher

* Migrated the Public services to the new Python-based dispatcher

* Migrated the About services to the new Python-based dispatcher

* Created an extension of the base dispatcher adding Meandre related information

* Added a test servlet to test the functionalities provided by the base servlet dispatcher

* Create the Python code to implement the base dispatcher

* Developed a unified base servlet dispatcher 

* Move the MDX branch from the experimental repository to the branch one

* Revamped the backend adapters to allow the proper schema creation for Derby

* Added method to the plugin interface

	/** Sets the core configuration object to use.
	 * 
	 * @param cnf The core configuration object
	 */
	public void setCoreConfiguration ( CoreConfiguration cnf )
	
* Identified and fixed a potential concurrent problem with the consoles and the interactive run facility

* Modified the engine to work with per flow output consoles

* Added a console output call to the ComponentContext properties to isolate consoles during run time

* Hooked the back end adapter to the meandre server

* Added a properties table that gets read everytime and status update by the service is preformed.

* Added /public/services/ping.txt which return "Pong" for pinguin live servers

* Added the automatic marking of out of sync to the backend adapter thread service
