@@ -16,7 +16,7 @@ public class WSExecuteServlet extends MeandreBaseServlet {
 	/** A default serial ID */
 	private static final long serialVersionUID = 1L;
 	
-	/** Creates the servlet to provide About information.
+	/** Creates the servlet to provide Execute information.
 	 * 
 	 * @param store The Meandre store to use
 	 * @param cnf The Meandre configuration to use
